azure/business-apps/next-portfolio/manifests/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-portfolio
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: portfolio-dev-az.nishdevops.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-portfolio
                port:
                  number: 80
